@@ -36,8 +36,7 @@ public class KittenStatistics {
      * @return List<Kitten>
      */
     public List<Kitten> findYoungestKittens() {
-//        return kittens.stream().min(Comparator.comparing(Kitten::getAge)).stream().toList();
-        return null;
+        return kittens.stream().min(Comparator.comparing(Kitten::getAge)).stream().collect(Collectors.toList());
     }
 
     /**
